fix scalability issue with nav icon on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,6 +482,12 @@ footer .text-light {
         font-size: 2.5rem;
     }
 
+.navbar-brand > i {
+    font-size: 3.5rem !important;
+    padding: 5px;
+}
+
+
  .navbar-nav a {
         font-size: 2rem;
     }
